--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <nav class="nav">
         <div class="navbar">
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="store.html">Store</a></li>
                 <li><a href="artists.html">Artists</a></li>
             </ul>
@@ -121,7 +121,7 @@
         <div class="browse">
             <h5>Browse</h5>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="artists.html">Artists</a></li>
                 <li><a href="store.html">Store</a></li>
                 <li><a href=""></a></li>
