--- a/artists.html
+++ b/artists.html
@@ -35,7 +35,7 @@
         <nav class="nav">
         <div class="navbar">
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="store.html">Store</a></li>
                 <li><a href="artists.html">Artists</a></li>
             </ul>
