--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <li><a href="https://www.facebook.com/450Recordz/" target="_blank">Facebook</a></li>
                 <li><a href="https://www.instagram.com/450recordslabel/" target="_blank">Instagram</a></li>
                 <li><a href="https://gofund.me/0dad6957" target="_blank">GoFundMe</a></li>
-                <li><a href=""></a></li>
+                <li><a href="https://linktr.ee/450Records2025">Linktree</a></li>
             </ul>
         </div>
         <div class="contact">
