--- a/store.html
+++ b/store.html
@@ -111,7 +111,7 @@
                 <h4>Please support the project by using our GoFundMe. <br> Every donation counts!</h4>
             </div>
             <div class="half">
-                <a href="https://gofund.me/0dad6957" target="_blank"><img src="gofundme_logo.png" height="60px"></a>
+                <a href="" target="_blank"><img src="gofundme_logo.png" height="60px"></a>
             </div>
         </section>
         <div class="separator">
