--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="homepage.css" />
+    <!--Overall Style-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rouge+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ranchers&family=Rouge+Script&display=swap" rel="stylesheet">
-
-    <!--Overall Style-->
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-K8LJ6DND');</script>
+    <!-- End Google Tag Manager -->         
   </head>
   <body>
     <section class="stick">
@@ -51,46 +57,44 @@
         </div>
     </section>
     <main>
-        <section class="artistintro flex">
-            <div class="half">
-                <img class="half_img" src="FB_IMG_1742806538420.jpg">
-
+        <section class="intro">
+            <div class="intro_border">
+                <h1>450 Records 2025</h1>
+                <p> Student run record label making music on Gadigal Land </p>
             </div>
-            <div class="half">
-                <img class="half_img" src="FB_IMG_1742806533155.jpg">
-            </div>
-        </section>
-        <div class="separator">
-        </div>
-        <section class="artistintro flex">
-            <div class="half">
-                <img class="half_img" src="FB_IMG_1742806547631.jpg">
-
-            </div>
-            <div class="half">
-                <img class="half_img" src="FB_IMG_1742806550263.jpg">
+            <div class="custom-shape-divider-bottom-1742543177">
+                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                    <path d="M741,116.23C291,117.43,0,27.57,0,6V120H1200V6C1200,27.93,1186.4,119.83,741,116.23Z" class="shape-fill"></path>
+                </svg>
             </div>
         </section>
-        <div class="separator">
-        </div>
-        <section class="artistintro flex">
-            <div class="half">
-                <img class="half_img" src="FB_IMG_1742806559510.jpg">
-
+        <section class="homestore">
+            <h2> New Products </h2>
+            <hr />
+            <div class="grid">
+                <div class="box"> 
+                    <a href=""><img src="product_placeholder.jpg"></a>
+                    <h5 class="box_name">Name</h5>
+                    <h5 class="box_price">Price</h5>
+                </div>
+                <div class="box"> 
+                    <a href=""><img src="product_placeholder.jpg"></a>
+                    <h5 class="box_name">Name</h5>
+                    <h5 class="box_price">Price</h5>
+                </div>
+                <div class="box"> 
+                    <a href=""><img src="product_placeholder.jpg"></a>
+                    <h5 class="box_name">Name</h5>
+                    <h5 class="box_price">Price</h5>
+                </div>
+                <div class="box"> 
+                    <a href=""><img src="product_placeholder.jpg"></a>
+                    <h5 class="box_name">Name</h5>
+                    <h5 class="box_price">Price</h5>
+                </div>
             </div>
-            <div class="half">
-                <img class="half_img" src="FB_IMG_1742806564726.jpg">
-            </div>
-        </section>
-        <div class="separator">
-        </div>
-        <section class="artistintro flex">
-            <div class="half">
-                <img class="half_img" src="FB_IMG_1742806574432.jpg">
-
-            </div>
-            <div class="half">
-                <img class="half_img" src="FB_IMG_1742806579463.jpg">
+            <div class="btn_div">
+                <a class="btn" href="store.html">View All</a>
             </div>
         </section>
         <div class="separator">
@@ -105,6 +109,13 @@
         </section>
         <div class="separator">
         </div>
+        <section class="artistintro">
+            <h2> 2025 Artist Roster </h2>
+            <img class="artist_poster" src="artist_poster_2025.jpg" width="80%">
+            <div class="btn_div">
+                <a class="btn" href="artists.html">Artist Profiles</a>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="browse">
@@ -131,7 +142,7 @@
                 <li><a href="https://www.facebook.com/450Recordz/" target="_blank">Facebook</a></li>
                 <li><a href="https://www.instagram.com/450recordslabel/" target="_blank">Instagram</a></li>
                 <li><a href="https://gofund.me/0dad6957" target="_blank">GoFundMe</a></li>
-                <li><a href=""></a></li>
+                <li><a href="https://linktr.ee/450Records2025">Linktree</a></li>
             </ul>
         </div>
         <div class="contact">
@@ -147,5 +158,9 @@
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <script src="main.js"></script>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K8LJ6DND"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   </body>
 </html>
