--- a/store.html
+++ b/store.html
@@ -8,12 +8,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="homepage.css" />
+    <!--Overall Style-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rouge+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ranchers&family=Rouge+Script&display=swap" rel="stylesheet">
-
-    <!--Overall Style-->
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-K8LJ6DND');</script>
+    <!-- End Google Tag Manager -->  
   </head>
   <body>
     <section class="stick">
@@ -51,48 +57,53 @@
         </div>
     </section>
     <main>
-        <section class="artistintro flex">
-            <div class="half">
-                <img class="half_img" src="FB_IMG_1742806538420.jpg">
-
+        <div class="homestore">
+            <h2> Store </h2>
+            <hr />
+            <div class="grid">
+                <div class="box"> 
+                    <a href=""><img src="product_placeholder.jpg"></a>
+                    <h5 class="box_name">Name</h5>
+                    <h5 class="box_price">Price</h5>
+                </div>
+                <div class="box"> 
+                    <a href=""><img src="product_placeholder.jpg"></a>
+                    <h5 class="box_name">Name</h5>
+                    <h5 class="box_price">Price</h5>
+                </div>
+                <div class="box"> 
+                    <a href=""><img src="product_placeholder.jpg"></a>
+                    <h5 class="box_name">Name</h5>
+                    <h5 class="box_price">Price</h5>
+                </div>
+                <div class="box"> 
+                    <a href=""><img src="product_placeholder.jpg"></a>
+                    <h5 class="box_name">Name</h5>
+                    <h5 class="box_price">Price</h5>
+                </div>
+                <div class="box"> 
+                    <a href=""><img src="product_placeholder.jpg"></a>
+                    <h5 class="box_name">Name</h5>
+                    <h5 class="box_price">Price</h5>
+                </div>
+                <div class="box"> 
+                    <a href=""><img src="product_placeholder.jpg"></a>
+                    <h5 class="box_name">Name</h5>
+                    <h5 class="box_price">Price</h5>
+                </div>
+                <div class="box"> 
+                    <a href=""><img src="product_placeholder.jpg"></a>
+                    <h5 class="box_name">Name</h5>
+                    <h5 class="box_price">Price</h5>
+                </div>
+                <div class="box"> 
+                    <a href=""><img src="product_placeholder.jpg"></a>
+                    <h5 class="box_name">Name</h5>
+                    <h5 class="box_price">Price</h5>
+                </div>
             </div>
-            <div class="half">
-                <img class="half_img" src="FB_IMG_1742806533155.jpg">
-            </div>
-        </section>
-        <div class="separator">
+            <h3> Preorders Available Soon </h3>
         </div>
-        <section class="artistintro flex">
-            <div class="half">
-                <img class="half_img" src="FB_IMG_1742806547631.jpg">
-
-            </div>
-            <div class="half">
-                <img class="half_img" src="FB_IMG_1742806550263.jpg">
-            </div>
-        </section>
-        <div class="separator">
-        </div>
-        <section class="artistintro flex">
-            <div class="half">
-                <img class="half_img" src="FB_IMG_1742806559510.jpg">
-
-            </div>
-            <div class="half">
-                <img class="half_img" src="FB_IMG_1742806564726.jpg">
-            </div>
-        </section>
-        <div class="separator">
-        </div>
-        <section class="artistintro flex">
-            <div class="half">
-                <img class="half_img" src="FB_IMG_1742806574432.jpg">
-
-            </div>
-            <div class="half">
-                <img class="half_img" src="FB_IMG_1742806579463.jpg">
-            </div>
-        </section>
         <div class="separator">
         </div>
         <section class="gofundme flex">
@@ -147,5 +158,9 @@
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <script src="main.js"></script>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K8LJ6DND"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   </body>
 </html>
