new update test

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </div>
                 <div class="box"> 
                     <a href=""><img src="product_placeholder.jpg"></a>
-                    <h5 class="box_name">Name</h5>
+                    <h5 class="box_name">Nameeeeeeeeeee</h5>
                     <h5 class="box_price">Price</h5>
                 </div>
                 <div class="box"> 
