new update test

--- a/artists.html
+++ b/artists.html
@@ -22,7 +22,7 @@
             <img src="450_logo_trans_small.png" width="80" height="80">
         </div>
         <div class="notice">
-            <p>Notice: This website is currently in construction, please be patient!</p>
+            <p>Notice: This website is currently under construction.</p>
         </div>
         <div class="custom-shape-divider-bottom-1742542274">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
