--- a/artists.html
+++ b/artists.html
@@ -1,20 +1,26 @@
 <!DOCTYPE HTML>
 <html lang='en'>
-  <head>
-    <title>450 Records</title>
-    <meta charset="UTF-8" />
-    <meta name="description" content="450 Records 2025." />
-    <meta name="keywords" content="450 Records" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="homepage.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rouge+Script&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ranchers&family=Rouge+Script&display=swap" rel="stylesheet">
-
-    <!--Overall Style-->
-  </head>
+    <head>
+        <title>450 Records</title>
+        <meta charset="UTF-8" />
+        <meta name="description" content="450 Records 2025." />
+        <meta name="keywords" content="450 Records" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="homepage.css" />
+        <!--Overall Style-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Rouge+Script&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ranchers&family=Rouge+Script&display=swap" rel="stylesheet">
+        <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-K8LJ6DND');</script>
+        <!-- End Google Tag Manager -->         
+    </head>
   <body>
     <section class="stick">
         <header class="header">  
@@ -38,6 +44,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="store.html">Store</a></li>
                 <li><a href="artists.html">Artists</a></li>
+                <li><a href="events.html">Events</a></li>
             </ul>
         </div>
         <div class="socials">
@@ -113,7 +120,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="artists.html">Artists</a></li>
                 <li><a href="store.html">Store</a></li>
-                <li><a href=""></a></li>
+                <li><a href="events.html">Events</a></li>
             </ul>
         </div>
         <div class="services">
@@ -131,7 +138,7 @@
                 <li><a href="https://www.facebook.com/450Recordz/" target="_blank">Facebook</a></li>
                 <li><a href="https://www.instagram.com/450recordslabel/" target="_blank">Instagram</a></li>
                 <li><a href="https://gofund.me/0dad6957" target="_blank">GoFundMe</a></li>
-                <li><a href=""></a></li>
+                <li><a href="https://linktr.ee/450Records2025">Linktree</a></li>
             </ul>
         </div>
         <div class="contact">
