--- a/events.html
+++ b/events.html
@@ -21,7 +21,7 @@
         })(window,document,'script','dataLayer','GTM-K8LJ6DND');</script>
         <!-- End Google Tag Manager -->         
     </head>
-    <body>
+  <body>
     <section class="stick">
         <header class="header">  
         <div class="main_logo">
@@ -58,55 +58,14 @@
         </div>
     </section>
     <main>
-        <div class="homestore">
-            <h2> Store </h2>
-            <hr />
-            <div class="grid">
-                <div class="box"> 
-                    <a href=""><img src="product_placeholder.jpg"></a>
-                    <h5 class="box_name">Name</h5>
-                    <h5 class="box_price">Price</h5>
-                </div>
-                <div class="box"> 
-                    <a href=""><img src="product_placeholder.jpg"></a>
-                    <h5 class="box_name">Name</h5>
-                    <h5 class="box_price">Price</h5>
-                </div>
-                <div class="box"> 
-                    <a href=""><img src="product_placeholder.jpg"></a>
-                    <h5 class="box_name">Name</h5>
-                    <h5 class="box_price">Price</h5>
-                </div>
-                <div class="box"> 
-                    <a href=""><img src="product_placeholder.jpg"></a>
-                    <h5 class="box_name">Name</h5>
-                    <h5 class="box_price">Price</h5>
-                </div>
-                <div class="box"> 
-                    <a href=""><img src="product_placeholder.jpg"></a>
-                    <h5 class="box_name">Name</h5>
-                    <h5 class="box_price">Price</h5>
-                </div>
-                <div class="box"> 
-                    <a href=""><img src="product_placeholder.jpg"></a>
-                    <h5 class="box_name">Name</h5>
-                    <h5 class="box_price">Price</h5>
-                </div>
-                <div class="box"> 
-                    <a href=""><img src="product_placeholder.jpg"></a>
-                    <h5 class="box_name">Name</h5>
-                    <h5 class="box_price">Price</h5>
-                </div>
-                <div class="box"> 
-                    <a href=""><img src="product_placeholder.jpg"></a>
-                    <h5 class="box_name">Name</h5>
-                    <h5 class="box_price">Price</h5>
-                </div>
+        <section class="eventmap flex">
+            <div class="lesserhalf">
+
             </div>
-            <h3> Preorders Available Soon </h3>
-        </div>
-        <div class="separator">
-        </div>
+            <div class="greaterhalf">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1539.3387207815852!2d151.18588598483007!3d-33.892621365565496!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b12b02d4ee6aaab%3A0xe93551958ce2cc91!2sThe%20Vanguard!5e1!3m2!1sen!2sau!4v1744111937973!5m2!1sen!2sau" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </section>
         <section class="gofundme flex">
             <div class="half">
                 <h4>Please support the project by using our GoFundMe. <br> Every donation counts!</h4>
@@ -159,9 +118,5 @@
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <script src="main.js"></script>
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K8LJ6DND"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
   </body>
 </html>
