idk update thing

--- a/artists.html
+++ b/artists.html
@@ -51,6 +51,7 @@
             <ul>
                 <li><a href="https://www.facebook.com/450Recordz/" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a></li>
                 <li><a href="https://www.instagram.com/450recordslabel/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
+                <li><a href="https://www.tiktok.com/@450recordslabel/" target="_blank"><ion-icon name="logo-tiktok"></ion-icon></a></li>
             </ul>
         </div>
         </nav>
@@ -60,44 +61,45 @@
     <main>
         <section class="artistintro flex">
             <div class="half">
-                <img class="half_img" src="FB_IMG_1742806538420.jpg">
+                <h> WORK IN PROGRESS</h>
+                <img class="half_img" src="">
 
             </div>
             <div class="half">
-                <img class="half_img" src="FB_IMG_1742806533155.jpg">
+                <img class="half_img" src="">
             </div>
         </section>
         <div class="separator">
         </div>
         <section class="artistintro flex">
             <div class="half">
-                <img class="half_img" src="FB_IMG_1742806547631.jpg">
+                <img class="half_img" src="">
 
             </div>
             <div class="half">
-                <img class="half_img" src="FB_IMG_1742806550263.jpg">
+                <img class="half_img" src="">
             </div>
         </section>
         <div class="separator">
         </div>
         <section class="artistintro flex">
             <div class="half">
-                <img class="half_img" src="FB_IMG_1742806559510.jpg">
+                <img class="half_img" src="">
 
             </div>
             <div class="half">
-                <img class="half_img" src="FB_IMG_1742806564726.jpg">
+                <img class="half_img" src="">
             </div>
         </section>
         <div class="separator">
         </div>
         <section class="artistintro flex">
             <div class="half">
-                <img class="half_img" src="FB_IMG_1742806574432.jpg">
+                <img class="half_img" src="">
 
             </div>
             <div class="half">
-                <img class="half_img" src="FB_IMG_1742806579463.jpg">
+                <img class="half_img" src="">
             </div>
         </section>
         <div class="separator">
