--- a/events.html
+++ b/events.html
@@ -51,6 +51,7 @@
             <ul>
                 <li><a href="https://www.facebook.com/450Recordz/" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a></li>
                 <li><a href="https://www.instagram.com/450recordslabel/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
+                <li><a href="https://www.tiktok.com/@450recordslabel/" target="_blank"><ion-icon name="logo-tiktok"></ion-icon></a></li>
             </ul>
         </div>
         </nav>
@@ -59,8 +60,13 @@
     </section>
     <main>
         <section class="eventmap flex">
-            <div class="lesserhalf">
-
+            <div class="lesserhalf txtbox">
+                <p>
+                Location - Vanguard, Newtown <br><br>
+                Event Dates: <br><br>
+                Monday, 5th May 2025 <br>
+                Monday, 12th May 2025
+            </p>
             </div>
             <div class="greaterhalf">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1539.3387207815852!2d151.18588598483007!3d-33.892621365565496!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b12b02d4ee6aaab%3A0xe93551958ce2cc91!2sThe%20Vanguard!5e1!3m2!1sen!2sau!4v1744111937973!5m2!1sen!2sau" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
