--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <ul>
                 <li><a href="https://www.facebook.com/450Recordz/" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a></li>
                 <li><a href="https://www.instagram.com/450recordslabel/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
+                <li><a href="https://www.tiktok.com/@450recordslabel/" target="_blank"><ion-icon name="logo-tiktok"></ion-icon></a></li>
             </ul>
         </div>
         </nav>
@@ -74,24 +75,19 @@
             <hr />
             <div class="grid">
                 <div class="box"> 
-                    <a href=""><img src="product_placeholder.jpg"></a>
-                    <h5 class="box_name">Name</h5>
-                    <h5 class="box_price">Price</h5>
+                    <a href=""><img src="tshirtblack.JPG"></a>
+                    <h5 class="box_name"></h5>
+                    <h5 class="box_price"></h5>
                 </div>
                 <div class="box"> 
-                    <a href=""><img src="product_placeholder.jpg"></a>
-                    <h5 class="box_name">Name</h5>
-                    <h5 class="box_price">Price</h5>
+                    <a href=""><img src="totes.jpg"></a>
+                    <h5 class="box_name"></h5>
+                    <h5 class="box_price"></h5>
                 </div>
                 <div class="box"> 
-                    <a href=""><img src="product_placeholder.jpg"></a>
-                    <h5 class="box_name">Nameeeeeeeeeee</h5>
-                    <h5 class="box_price">Price</h5>
-                </div>
-                <div class="box"> 
-                    <a href=""><img src="product_placeholder.jpg"></a>
-                    <h5 class="box_name">Name</h5>
-                    <h5 class="box_price">Price</h5>
+                    <a href=""><img src="sticker1.jpg"></a>
+                    <h5 class="box_name"></h5>
+                    <h5 class="box_price"></h5>
                 </div>
             </div>
             <div class="btn_div">
