--- a/store.html
+++ b/store.html
@@ -22,88 +22,81 @@
         <!-- End Google Tag Manager -->         
     </head>
     <body>
-    <section class="stick">
-        <header class="header">  
-        <div class="main_logo">
-            <img src="450_logo_trans_small.png" width="80" height="80">
-        </div>
-        <div class="notice">
-            <p>Notice: This website is currently under construction.</p>
-        </div>
-        <div class="custom-shape-divider-bottom-1742542274">
-            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-                <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
-                <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
-                <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
-            </svg>
-        </div>
-        </header>  
-        <nav class="nav">
-        <div class="navbar">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="store.html">Store</a></li>
-                <li><a href="artists.html">Artists</a></li>
-                <li><a href="events.html">Events</a></li>
-            </ul>
-        </div>
-        <div class="socials">
-            <ul>
-                <li><a href="https://www.facebook.com/450Recordz/" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a></li>
-                <li><a href="https://www.instagram.com/450recordslabel/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
-            </ul>
-        </div>
-        </nav>
-        <div class="separator">
-        </div>
-    </section>
+        <section class="stick">
+            <header class="header">  
+            <div class="main_logo">
+                <img src="450_logo_trans_small.png" width="80" height="80">
+            </div>
+            <div class="notice">
+                <p>Notice: This website is currently under construction.</p>
+            </div>
+            <div class="custom-shape-divider-bottom-1742542274">
+                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                    <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
+                    <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
+                    <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
+                </svg>
+            </div>
+            </header>  
+            <nav class="nav">
+            <div class="navbar">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="store.html">Store</a></li>
+                    <li><a href="artists.html">Artists</a></li>
+                    <li><a href="events.html">Events</a></li>
+                </ul>
+            </div>
+            <div class="socials">
+                <ul>
+                    <li><a href="https://www.facebook.com/450Recordz/" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a></li>
+                    <li><a href="https://www.instagram.com/450recordslabel/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
+                    <li><a href="https://www.tiktok.com/@450recordslabel/" target="_blank"><ion-icon name="logo-tiktok"></ion-icon></a></li>
+                </ul>
+            </div>
+            </nav>
+            <div class="separator">
+            </div>
+        </section>
     <main>
         <div class="homestore">
             <h2> Store </h2>
             <hr />
             <div class="grid">
                 <div class="box"> 
-                    <a href=""><img src="product_placeholder.jpg"></a>
-                    <h5 class="box_name">Name</h5>
-                    <h5 class="box_price">Price</h5>
+                    <a href=""><img src="tshirtblack.JPG"></a>
+                    <h5 class="box_name">450 Records T-Shirt - Black</h5>
+                    <h5 class="box_price">$25.00</h5>
                 </div>
                 <div class="box"> 
-                    <a href=""><img src="product_placeholder.jpg"></a>
-                    <h5 class="box_name">Name</h5>
-                    <h5 class="box_price">Price</h5>
+                    <a href=""><img src="tshirtwhite.JPG"></a>
+                    <h5 class="box_name">450 Records T-Shirt - White</h5>
+                    <h5 class="box_price">$25.00</h5>
                 </div>
                 <div class="box"> 
-                    <a href=""><img src="product_placeholder.jpg"></a>
-                    <h5 class="box_name">Name</h5>
-                    <h5 class="box_price">Price</h5>
+                    <a href=""><img src="sticker1.jpg"></a>
+                    <h5 class="box_name">450 Records Sticker - Regular</h5>
+                    <h5 class="box_price">2 for $4.00</h5>
                 </div>
                 <div class="box"> 
-                    <a href=""><img src="product_placeholder.jpg"></a>
-                    <h5 class="box_name">Name</h5>
-                    <h5 class="box_price">Price</h5>
+                    <a href=""><img src="sticker2barcode.jpg"></a>
+                    <h5 class="box_name">450 Records Sticker - Barcode</h5>
+                    <h5 class="box_price">2 for $4.00</h5>
                 </div>
                 <div class="box"> 
-                    <a href=""><img src="product_placeholder.jpg"></a>
-                    <h5 class="box_name">Name</h5>
-                    <h5 class="box_price">Price</h5>
+                    <a href=""><img src="totes.jpg"></a>
+                    <h5 class="box_name">450 Records Tote Bag</h5>
+                    <h5 class="box_price">$15.00</h5>
                 </div>
                 <div class="box"> 
-                    <a href=""><img src="product_placeholder.jpg"></a>
-                    <h5 class="box_name">Name</h5>
-                    <h5 class="box_price">Price</h5>
-                </div>
-                <div class="box"> 
-                    <a href=""><img src="product_placeholder.jpg"></a>
-                    <h5 class="box_name">Name</h5>
-                    <h5 class="box_price">Price</h5>
-                </div>
-                <div class="box"> 
-                    <a href=""><img src="product_placeholder.jpg"></a>
-                    <h5 class="box_name">Name</h5>
-                    <h5 class="box_price">Price</h5>
+                    <a href=""><img src="picks.jpg"></a>
+                    <h5 class="box_name">450 Records Guitar Picks</h5>
+                    <h5 class="box_price">$3.00</h5>
                 </div>
             </div>
-            <h3> Preorders Available Soon </h3>
+            <h3> All Merchandise can only be bought from the event venue</h3>
+            <br>
+            <a href="events.html">click here to see the event schedule</a>
         </div>
         <div class="separator">
         </div>
