update message thingy

--- a/events.html
+++ b/events.html
@@ -77,11 +77,9 @@
                 <h4>Please support the project by using our GoFundMe. <br> Every donation counts!</h4>
             </div>
             <div class="half">
-                <a href="" target="_blank"><img src="gofundme_logo.png" height="60px"></a>
+                <a href="https://www.gofundme.com/f/support-student-run-record-label-450-records" target="_blank"><img src="gofundme_logo.png" height="60px"></a>
             </div>
         </section>
-        <div class="separator">
-        </div>
     </main>
     <footer class="footer">
         <div class="browse">
@@ -107,8 +105,9 @@
             <ul>
                 <li><a href="https://www.facebook.com/450Recordz/" target="_blank">Facebook</a></li>
                 <li><a href="https://www.instagram.com/450recordslabel/" target="_blank">Instagram</a></li>
-                <li><a href="https://gofund.me/0dad6957" target="_blank">GoFundMe</a></li>
+                <li><a href="https://www.gofundme.com/f/support-student-run-record-label-450-records" target="_blank">GoFundMe</a></li>
                 <li><a href="https://linktr.ee/450Records2025">Linktree</a></li>
+                <li><a href="https://www.tiktok.com/@450recordslabel/">Tiktok</a></li>
             </ul>
         </div>
         <div class="contact">
