--- a/artists.html
+++ b/artists.html
@@ -69,8 +69,6 @@
                 <img class="half_img" src="">
             </div>
         </section>
-        <div class="separator">
-        </div>
         <section class="artistintro flex">
             <div class="half">
                 <img class="half_img" src="">
@@ -80,8 +78,6 @@
                 <img class="half_img" src="">
             </div>
         </section>
-        <div class="separator">
-        </div>
         <section class="artistintro flex">
             <div class="half">
                 <img class="half_img" src="">
@@ -91,8 +87,6 @@
                 <img class="half_img" src="">
             </div>
         </section>
-        <div class="separator">
-        </div>
         <section class="artistintro flex">
             <div class="half">
                 <img class="half_img" src="">
@@ -102,18 +96,14 @@
                 <img class="half_img" src="">
             </div>
         </section>
-        <div class="separator">
-        </div>
         <section class="gofundme flex">
             <div class="half">
                 <h4>Please support the project by using our GoFundMe. <br> Every donation counts!</h4>
             </div>
             <div class="half">
-                <a href="" target="_blank"><img src="gofundme_logo.png" height="60px"></a>
+                <a href="https://www.gofundme.com/f/support-student-run-record-label-450-records" target="_blank"><img src="gofundme_logo.png" height="60px"></a>
             </div>
         </section>
-        <div class="separator">
-        </div>
     </main>
     <footer class="footer">
         <div class="browse">
@@ -139,8 +129,9 @@
             <ul>
                 <li><a href="https://www.facebook.com/450Recordz/" target="_blank">Facebook</a></li>
                 <li><a href="https://www.instagram.com/450recordslabel/" target="_blank">Instagram</a></li>
-                <li><a href="https://gofund.me/0dad6957" target="_blank">GoFundMe</a></li>
+                <li><a href="https://www.gofundme.com/f/support-student-run-record-label-450-records" target="_blank">GoFundMe</a></li>
                 <li><a href="https://linktr.ee/450Records2025">Linktree</a></li>
+                <li><a href="https://www.tiktok.com/@450recordslabel/">Tiktok</a></li>
             </ul>
         </div>
         <div class="contact">
